<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    tools:context=".presentation.screens.authentication.RegisterScreenFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/proxima_font_family"
        android:textSize="23sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/create_account_description"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_font_family"
        android:textSize="15dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/invalid_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_font_family"
        android:textColorHint="@color/text_grey"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/username"
        android:singleLine="true"
        android:textCursorDrawable="@color/white" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/invalid_edit_text"
        android:drawableStart="@drawable/ic_username"
        android:drawableTint="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_font_family"
        android:textColorHint="@color/text_grey"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/password"
        android:singleLine="true"
        android:textCursorDrawable="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/invalid_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_font_family"
        android:textColorHint="@color/text_grey"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/confirm_password"
        android:singleLine="true"
        android:textCursorDrawable="@color/white" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/invalid_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_font_family"
        android:textColorHint="@color/text_grey"
        android:textCursorDrawable="@color/white" />


    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_font_family"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_placeholder"
            android:backgroundTint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/sign_up_alternative"
            android:fontFamily="@font/proxima_font_family"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_placeholder"
            android:backgroundTint="@color/white" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/google_sign_in"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/ring_gradient_google_icon"
        android:clickable="true"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:src="@drawable/google_logo" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_font_family"
            android:text="@string/account_already_created"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/account_already_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:fontFamily="@font/proxima_font_family"
            android:text="@string/sign_in"
            android:textColor="?colorSecondary"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>