<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.movie_details.MovieDetailsScreenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop" />

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/movie_details_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp" />

                <Button
                    android:id="@+id/watch_trailer_button_home"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="220dp"
                    android:background="@drawable/gradient_button_v2"
                    android:drawableStart="@drawable/ic_baseline_play_circle_outline_20"
                    android:fontFamily="@font/proxima_nova_alt_light"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/watch_trailer"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_marginTop="285dp"
                    android:background="@drawable/vertical_gradient" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/app_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_alt_bold"
                    android:gravity="center"
                    android:text="Name"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <TextView
                    android:id="@+id/movie_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:fontFamily="@font/proxima_nova_alt_light"
                    android:gravity="center"
                    android:text="@string/mock_details"
                    android:maxLines="2"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <com.willy.ratingbar.ScaleRatingBar
                    android:id="@+id/rating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:clickable="false"
                    app:srb_drawableEmpty="@drawable/ic_empty_star"
                    app:srb_drawableFilled="@drawable/ic_star"
                    app:srb_minimumStars="1"
                    app:srb_numStars="5"
                    app:srb_rating="4.3"
                    app:srb_scrollable="false"
                    app:srb_starHeight="20dp"
                    app:srb_starPadding="2dp"
                    app:srb_starWidth="20dp"
                    app:srb_clickable="false"
                    app:srb_stepSize="0.1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/horizontal_bar" />

                <TextView
                    android:id="@+id/story_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_alt_regular"
                    android:gravity="left"
                    android:text="@string/story_line"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_alt_light"
                    android:gravity="left"
                    android:text="@string/mock_description"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/check_availability_button"
                    android:layout_width="230dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/gradient_button"
                    android:drawableEnd="@drawable/arrow_right"
                    android:fontFamily="@font/proxima_nova_alt_light"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:text="@string/check_available"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/proxima_nova_alt_regular"
                    android:gravity="left"
                    android:text="@string/similar_movies"
                    android:textColor="@color/white"
                    android:textSize="23dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>