<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screens.cinema.CinemaScreenFragment">

    <FrameLayout
        android:id="@+id/frameLayoutToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <include
            android:id="@+id/home_screen_toolbar"
            layout="@layout/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/cinemaLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/frameCinemaFeatured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">

            <include
                android:id="@+id/cinema_featured"
                layout="@layout/cardview_cinema_wide_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_alt_regular"
                android:paddingHorizontal="15dp"
                android:text="@string/nearby"
                android:textColor="@color/white"
                android:textSize="@dimen/home_textView_category_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/viewAllCinemas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_all_margin_top"
                android:clickable="true"
                android:fontFamily="@font/proxima_nova_alt_regular"
                android:paddingHorizontal="15dp"
                android:text="@string/viewAll"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/view_all_text_size"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCinemasNearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                app:layout_constraintTop_toTopOf="@+id/viewAllCinemas" />


            <Button
                android:id="@+id/see_map"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/gradient_button"
                android:drawableStart="@drawable/ic_map"
                android:drawableTint="@color/white"
                android:fontFamily="@font/proxima_font_family"
                android:gravity="center"
                android:paddingHorizontal="25dp"
                android:text="@string/cinemas_map"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewCinemasNearby" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</LinearLayout>