<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.settings.SettingsFragment"
    android:background="@drawable/app_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="@dimen/avatar_start_margin"
                    android:layout_marginTop="@dimen/avatar_top_margin"
                    android:background="@drawable/circle_gradient"
                    android:padding="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/avatarPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:shapeAppearanceOverlay="@style/toolbar_avatar_style"
                        app:srcCompat="@drawable/tzanca" />
                </FrameLayout>

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/account_name_start_margin"
                    android:layout_marginTop="@dimen/account_name_top_margin"
                    android:fontFamily="@font/proxima_nova_alt_regular"
                    android:text="Hello, Andrei"
                    android:textColor="@color/white"
                    android:textSize="@dimen/hello_text_size"
                    app:layout_constraintBottom_toTopOf="@id/textViewTitle"
                    app:layout_constraintStart_toEndOf="@id/imageViewAvatar"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/favourite_textView_start_margin"
                    android:layout_marginTop="@dimen/favourite_textView_top_margin"
                    android:fontFamily="@font/proxima_nova_alt_thin"
                    android:text="@string/favourite_movies"
                    android:textColor="@color/text_grey"
                    app:layout_constraintStart_toEndOf="@id/imageViewAvatar"
                    app:layout_constraintTop_toBottomOf="@id/textViewName" />

                <FrameLayout
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/icon_stroke_gradient"
                    android:padding="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView

                        android:id="@+id/imageViewBell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?colorPrimary"
                        app:shapeAppearanceOverlay="@style/bell_style"
                        app:srcCompat="@drawable/ic_notification" />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewDiscover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/proxima_nova_alt_regular"
                android:text="@string/text_view_discover"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/reciclerViewDiscoverSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayoutToolbar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reciclerViewDiscoverSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/textViewNotifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDiscover">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textViewNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/proxima_nova_alt_regular"
                android:text="@string/text_view_settings_nofications"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/reciclerViewNotificationsSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reciclerViewDiscoverSettings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reciclerViewNotificationsSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/textViewThemes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewNotifications">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textViewThemes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/proxima_nova_alt_regular"
                android:text="@string/text_view_settings_themes"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/constraintLayoutSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reciclerViewNotificationsSettings" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewThemes"
                app:layout_constraintBottom_toTopOf="@id/textViewLogOut">

                <Spinner
                    android:id="@+id/spinnerThemes"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/themes_spinner_settings"
                    android:dropDownWidth="fill_parent"
                    android:padding="1dp"
                    android:popupBackground="@android:color/transparent"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageViewSpinnerArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="38dp"
                    android:src="@android:drawable/arrow_down_float"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/textViewLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_button"
                android:fontFamily="@font/proxima_nova_alt_light"
                android:gravity="center"
                android:paddingHorizontal="30dp"
                android:text="@string/logout"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/constraintLayoutSpinner"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</FrameLayout>